[tool.poetry]
name = "slack-channeler"
version = "0.0.1.dev0"
description = "Power a Slack bot with Django Channels v2"
authors = ["Zach \"theY4Kman\" Kanzler <they4kman@gmail.com>"]
license = 'MIT'
readme = 'README.md'
exclude = [
    # This file will be generated dynamically at build time
    "slack_channeler/version.py"
]

[tool.poetry.dependencies]
channels = "^2"
inflection = "^0.5.1"
marshmallow = "^3.8.0"
python = ">=3.6"
pyyaml = "*"
slackclient = "^2.1.0"

pprintpp = { version = "*", optional = true }
pygments = { version = "*", optional = true }
pyyaml = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
channels-redis = "^2.4"
pytest = "^3.0"

[tool.poetry.extras]
highlighting = ["pygments", "pprintpp", "pyyaml"]

[tool.poetry.scripts]
slack_channeler = "slack_channeler.management.commands.slack_channeler:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
